--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -68,3 +68,9 @@ a.text-light:hover {
 .text-warning {
   color: var(--warning) !important;
 }
+
+.views{
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
