--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -74,3 +74,27 @@ a.text-light:hover {
   top: 10px;
   right: 10px;
 }
+
+.scrollmenu {
+  overflow: auto;
+  white-space: nowrap;
+}
+
+.scrollmenu a {
+  display: inline-block;
+  text-align: center;
+  padding: 14px;
+  text-decoration: none;
+}
+
+.service-desc{
+  font-size: 10px;
+}
+
+.laptop-thumb{
+  cursor: pointer;
+  transition: all .2s ease-in-out;
+}
+.laptop-thumb:hover{
+  transform: translateY(-5px);
+}
