--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -102,7 +102,9 @@ a.text-light:hover {
 #admin-sidebar{
   padding: 0;
   margin: 0;
-  transition: all .3s ease-in-out;
+  transition: all .2s;
+  height: 100%;
+  overflow:hidden;
 }
 #admin-sidebar .link:hover{
   background-color: var(--warning);
